@startuml

class main
package "controller" {
    class AccountController
    class MainController
    class NetworkController
}
package "view" {
    class MainWindow
    class MainView
    class AccountView
}

package "services"
{
    class NetworkManager
    package "NetworkService" {
        interface INetworkService
        class TCPService
        class UDPService
    }
}

package "model"
{

}

INetworkService <|.. TCPService
INetworkService <|.. UDPService
NetworkManager --> INetworkService

AccountController --> MainView
MainController --> AccountView
NetworkController --> NetworkManager

MainWindow *-- MainView
MainWindow *-- AccountView

main --> MainWindow
main --> NetworkManager

@enduml
